fix h3 span over topbar bug by adding z-index1000 to topbar

--- a/src/styles/_bars.scss
+++ b/src/styles/_bars.scss
@@ -98,6 +98,8 @@
 .topbar {
     @include flex-straight(column, flex-start, flex-end);
 
+    z-index: 1000;
+
     .hamburger {
 
         &:focus {
